--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,13 @@
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
 #
 # Binaries for programs and plugins
-*.exe
+#*.exe
 *.exe~
 *.dll
 *.so
 *.dylib
 .DS_Store
 .idea
-builds
 # Test binary, built with `go test -c`
 *.test
 
